--- a/flowerbasket/views/pages/showorderhistory.ejs
+++ b/flowerbasket/views/pages/showorderhistory.ejs
@@ -2,12 +2,11 @@
   <table class="table table-striped">
     <thead>
       <tr>
-
         <th>Flower Name</th>
         <th>Basket Name</th>
-    
+
         <th>Order Date</th>
-  
+
         <th>Status</th>
       </tr>
     </thead>
@@ -18,7 +17,7 @@
           <%= i.flowerName %>
         </td>
         <td>
-          <%= i.BasketName %>
+          <%= i.basketName %>
         </td>
         <td>
           <%= i.orderDate %>
